fixed mobile overlap

--- a/Training/Trainingmore/Trainingmore.css
+++ b/Training/Trainingmore/Trainingmore.css
@@ -285,13 +285,15 @@ main {
 }
 
 #landing {
+
   background: #fff;
+
 }
 
 #landing-text {
   display: flex;
   flex: 0 1 40vw;
-  height: 50vh;
+  height: auto;
   justify-content: center;
   align-items: center;
   text-align: center;
